--- a/application/clients/desktopV2/src/app/project-component/screen-popup/screen-popup.component.html
+++ b/application/clients/desktopV2/src/app/project-component/screen-popup/screen-popup.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
     <div class="row screenImg">
         <div class="col-md-6 col-sm-6 col-lg-6">
-            <input id="image1" type="radio" name="radioImage" [(ngModel)]="image1" [value]="image1" (click)="type('desktop')" />
+            <input id="image1" type="radio" name="radioImage" [(ngModel)]="image1" [value]="image1" (click)="type('web')" />
             <label class="radioButton image1" for="image1"></label>
         </div>
         <div class="col-md-6 col-sm-6 col-lg-6">
