--- a/generator/services/Angular-Template-managerV12/templates/SharedService.handlebars
+++ b/generator/services/Angular-Template-managerV12/templates/SharedService.handlebars
@@ -4,7 +4,7 @@ import { environment } from '../environments/environment';
 @Injectable()
 export class SharedService {
 
-     public DESKTOP_API = environment.DESKTOP_API;
+     public WEB_API = environment.WEB_API;
      public UPLOAD_API = environment.UPLOAD_API;
     public MOBILE_API = environment.MOBILE_API;
 }
