--- a/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
+++ b/application/clients/desktopV2/src/app/screen-designer/desktop-screen/desktop-screen.component.html
@@ -39,11 +39,31 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Component is still under generation...</p>
-                <p>Some features may not work!</p>
+                <p>Component is still under construction...</p>
+                <p>Some generation features may not work!</p>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-danger" (click)="closeWarn()">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="statusCodeModal" tabindex="-1" role="dialog" style="display: none">
+    <div class="modal-dialog modal-md" role="dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel" style="color:red">Warning!</h5>
+                <button type="button" class="close" (click)="closeStatusCode()" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h5>Payload too large!!!</h5>
+                <p>Please try uploading a smaller image!</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-danger" (click)="closeStatusCode()">Close</button>
             </div>
         </div>
     </div>
