security model update for image upload

--- a/generator/services/sef-node-gen-manager/template/model.handlebars
+++ b/generator/services/sef-node-gen-manager/template/model.handlebars
@@ -12,6 +12,7 @@ export const {{Schema}} = new Schema({
    username: String,
    email: String,
    password: String,
+   avatar: String,
    phonenumber: String,
    Idtoken: String,
    loggedinDate: Date,
