--- a/generator/services/seed/AngularV13/admin/admin.component.html
+++ b/generator/services/seed/AngularV13/admin/admin.component.html
@@ -35,7 +35,7 @@
                                     <div id="iemrh7" class="gdp-row gpd-grid">
                                         <div id="i7trrs" class="cell gpd-clm"><img src="https://cdn.grapedrop.com/uf9ef8595751c4d1f87c91168f5d51a8c/59864fc5225d4dbd98f7ff895e715fb6_vaul.png" id="iu3vly" /></div>
                                         <div id="ivt7k8" class="cell gpd-clm">
-                                            <div id="ifs5g7" class="gpd-text">Vault
+                                            <div id="ifs5g7" class="gpd-text" [routerLink]="['/vaultadmin']">Vault
                                             </div>
                                             <div id="iiq5zm" class="gpd-text">administration
                                             </div>
