menu-builder started

--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -83,7 +83,7 @@
                 <mat-expansion-panel-header style="padding: 3%;">
                     <mat-panel-title id="feature_heading">Menu Builder</mat-panel-title>
                 </mat-expansion-panel-header>
-                <h1 class="text-center">Coming Soon</h1>
+                <app-menu-builder></app-menu-builder>
             </mat-expansion-panel>
             <mat-expansion-panel [expanded]="false">
                 <mat-expansion-panel-header style="padding: 3%;">
