template-manager added

--- a/application/clients/desktopV2/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktopV2/src/app/menu-builder/menu-builder.component.html
@@ -2,6 +2,11 @@
     <ngx-spinner bdColor="rgba(231,220,220,0.33)" size="small" color="#b2acac" [fullScreen]="true">
         <img class="loading-image" src='../../assets/img/loading-animation.gif' />
     </ngx-spinner>
+    <mat-expansion-panel-header>
+        <mat-panel-title>
+            Menu Builder
+        </mat-panel-title>
+    </mat-expansion-panel-header>
     <div style="padding-right: 20px;">
         <div class="container">
             <div class="row">
@@ -10,7 +15,11 @@
                         <h6>Language:</h6>
                         <mat-form-field>
                             <mat-label>Select a Language</mat-label>
-
+                            <mat-select [(ngModel)]="selectedLang" (ngModelChange)="onChangeLang($event)">
+                                <mat-option *ngFor="let lang of languages" [value]="lang">
+                                    {{lang}}
+                                </mat-option>
+                            </mat-select>
                         </mat-form-field>
                     </div>
                 </div>
@@ -18,20 +27,20 @@
                     <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <input type="text" class="form-control" name="name" disabled placeholder="Enter Name" />
+                            <input type="text" class="form-control" name="name" disabled placeholder="Enter Name" [(ngModel)]="name" />
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
-
+                    <app-tree-drag></app-tree-drag>
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
                     <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
                         <div class="form-group">
                             <label for="name">Description</label>
-                            <input type="text" class="form-control" name="description" placeholder="Enter Description" />
+                            <input type="text" class="form-control" name="description" placeholder="Enter Description" [(ngModel)]="description" />
                         </div>
                     </div>
                 </div>
@@ -39,9 +48,8 @@
             <div class="row">
                 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
                     <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 mt-sm-3 mt-md-3 mt-lg-3 mt-xl-3">
-                        <button class="btn btn-primary btn_color">Update</button>
+                        <button class="btn btn-primary btn_color" (click)="updateMenuBuilder(description)">Update</button>
                     </div>
-
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
                 </div>
