--- a/application/clients/desktopV2/src/app/project-component/project-component.component.html
+++ b/application/clients/desktopV2/src/app/project-component/project-component.component.html
@@ -89,7 +89,7 @@
                 <mat-expansion-panel-header style="padding: 3%;">
                     <mat-panel-title id="feature_heading">Template Manager</mat-panel-title>
                 </mat-expansion-panel-header>
-                <h1 class="text-center">Coming Soon</h1>
+                <app-template-manager [projectId]="project_id"> </app-template-manager>
             </mat-expansion-panel>
         </mat-accordion>
     </div>
