Menu builder done

--- a/application/clients/desktopV2/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktopV2/src/app/menu-builder/menu-builder.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row">
             <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
-
+                <app-tree-drag></app-tree-drag>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
                 <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
