--- a/application/clients/desktopV2/src/styles.scss
+++ b/application/clients/desktopV2/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+//toaster
+@import '~ngx-toastr/toastr.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "~ag-grid-community/dist/styles/ag-theme-alpine.css";
 @import '@angular/material/prebuilt-themes/indigo-pink.css';
 @import "~ag-grid-community/dist/styles/ag-grid.css";
 @import "~ag-grid-community/dist/styles/ag-theme-balham.css";
